# opendigger-cli

./: Cargo.toml  LICENSE  README.md  README_STATIC.md  T2-SOLE回收站.md
.github/workflows/: build.yml  release.yml  rust.yml
doc/: design.md  决赛-T2-SOLE回收站.md  决赛-T2-SOLE回收站（静态）.md  复赛-T2-SOLE回收站.md
src/: cli.rs  command.rs  config.rs  main.rs
src/api/: client.rs  error.rs  mod.rs  model.rs  types.rs
src/engine/: mod.rs  util.rs  value.rs
src/networkgraph/: mod.rs
src/networkgraph/analyze/: analyzer.rs  mod.rs
src/networkgraph/table/: generic_network.rs  mod.rs  openrank_network.rs  types.rs
src/report/: mod.rs  quota.html  repo.rs
src/report/scripts/: quota.js
src/report/styles/: common.css
src/sql/: analyzer.rs  mod.rs  table.rs
src/sql/storage/: alter_table.rs  index.rs  mod.rs  store.rs  transaction.rs
src/sql/storage/tables/: activity.rs  attention.rs  mod.rs  openrank.rs
src/sql/strategy/: brute_force.rs  mod.rs
src/sql/strategy/analyze/: analyzer.rs  mod.rs
src/sql/table/: active_dates_and_times.rs  activity.rs  attention.rs  bus_factor.rs  change_request.rs  code_change_lines.rs  inactive_contributors.rs  issue.rs  mod.rs  network.rs  new_contributors.rs  openrank.rs  participants.rs  stars.rs  technical_fork.rs  types.rs
src/ui/: mod.rs  report.rs  table.rs  util.rs
src/ui/table/: interactive.rs  mod.rs  simple.rs
