[package]
name = "opendigger-cli"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
lazy_static = "1.4.0"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [
    "env-filter",
    "fmt",
    "local-time",
] }
tracing-futures = { version = "0.2.5", features = ["tokio", "tokio-executor"] }

color-eyre = "0.6.2"

anyhow = "1.0.70"
thiserror = "1.0.40"

clap = { version = "4.2.1", features = ["derive"] }
config = "0.13.3"

tokio = { version = "1.27.0", features = ["full"] }
futures = "0.3.28"
reqwest = { version = "0.11.16", features = [
    "rustls-tls",
    "cookies",
    "gzip",
    "deflate",
    "json",
    "stream",
] }
http = "0.2.9"

bytes = "1.4.0"

strum = { version = "0.24.1", features = ["derive"] }

serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"

regex = "1.8.1"

once_cell = "1.17.1"
itertools = "0.10.5"

chrono = { version = "0.4.24" }

quick_cache = "0.3.0"

gluesql = "0.13.1"

tui = "0.19"
crossterm = "0.26.1"

term-table = "1.3.2"

fdg-sim = "0.9.1"
petgraph = "0.6.3"
